Bug 318469 - There needs to be a button to show solutions.
Summary: There needs to be a button to show solutions.
Status: RESOLVED FIXED
Alias: None
Product: picmi
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.0
Platform: Debian unstable Linux
: NOR normal
Target Milestone: ---
Assignee: Jakob Linke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-04-16 22:08 UTC by shirish agarwal
Modified: 2013-07-01 08:49 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.11
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description shirish agarwal 2013-04-16 22:08:27 UTC
Hi all, 
Let's say you play a game and you are not able to solve it. There should be a button to show the solution. 

Reproducible: Always
Comment 1 Jakob Linke 2013-04-17 06:57:04 UTC
I will get around to this at the latest during the summer (in the meantime, patches are welcome).
Comment 2 Jakob Linke 2013-07-01 08:49:02 UTC
Git commit 957fee244e41f2a28920699f7b585c5a345931d6 by Jakob Gruber.
Committed on 01/07/2013 at 08:25.
Pushed by gruber into branch 'master'.

Implement the Solve menu action
FIXED-IN: 4.11

M  +3    -1    src/gui/mainwindow.cpp

http://commits.kde.org/picmi/957fee244e41f2a28920699f7b585c5a345931d6