Implement the Solve menu action

BUG: 318469
FIXED-IN: 4.11